Added logo, fixed issues with ties, fixed formatting issues, added last match(es) to event schedule

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>PitDashboard</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script src= "https://player.twitch.tv/js/embed/v1.js"></script>
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>930's Pit Dashboard</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="https://images.squarespace-cdn.com/content/v1/52cf38d4e4b00e94d88c24af/bb0c7b4b-8c89-469d-b8b3-037fb3c5798c/favicon.ico?format=100w"
+    />
+    <script src="https://player.twitch.tv/js/embed/v1.js"></script>
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
